<resources>
    <string name="app_name">LearnQuizJP</string>
    <string name="text1">Do not have an account?</string>
    <string name="text2">Forget Password?</string>
    <string name="text3">Already have an account?</string>
    <string name="text4">Sign in</string>
    <string name="title_login_fb">LOGIN WITH FACEBOOK</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="prompt_repassword">Repassword (optional)</string>
    <string name="action_sign_in">LOGIN</string>
    <string name="action_Sign_in_now">SIGN IN NOW</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="login_tv_register_new_account">Not a member? Get registered now!</string>
    <string name="login_cb_remember">Remember me</string>
    <string name="notify_empty_email">Email can not be empty</string>
    <string name="notify_length_pass">Password too short, enter minimum 6 characters!</string>
    <string name="notify_empty_pass">Password can not be empty</string>
    <string name="login_successful">Login successful</string>
    <string name="login_fail">Authentication failed, check your email and password or sign up</string>
    <string name="login_forget_password">Forget your password ?</string>


    <!--SignUpActivity-->
    <string name="register_tv_back_login">Already have account? Login now</string>
    <string name="action_register">Register</string>
    <string name="register_tv_title">Register new account</string>
    <string name="register_tv_warning">All field has been required</string>
    <string name="signup_password_not_match">Password not match</string>
    <string name="register_successful">createUserWithEmail:onComplete:</string>

    <!--ResetPasswordActivity-->
    <string name="forgot_pass_title">Reset your password</string>
    <string name="forgot_pass_confirm">We just need your registered Email Id to sent you password reset instructions
    </string>
    <string name="action_reset_password">Reset password</string>
    <string name="forgot_pass_empty_email">Enter your registered email id</string>
    <string name="forgot_pass_sent_successful">We have sent you instructions to reset your password!</string>
    <string name="forgot_pass_sent_fail">Failed to send reset email!</string>

    <!--HomeActivity-->
    <string name="home_btn_search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_result">ResultActivity</string>

    <string name="title_activity_start">StartActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="tv_lever_N1">N1</string>
    <string name="tv_lever_N2">N2</string>
    <string name="tv_lever_N3">N3</string>
    <string name="tv_lever_N4">N4</string>
    <string name="tv_lever_N5">N5</string>
    <string name="tv_practice">Luyện tập</string>
    <string name="tv_test">Thi thử</string>
    <string name="tv_failnoti">Chúc bạn may mắn lần sau!</string>
    <string name="tv_true">Câu đúng</string>
    <string name="tv_fail">Câu sai</string>
    <string name="tv_do_not">Câu chưa làm</string>
    <string name="tv_ready">Bạn đã sẵn sàng làm đề?</string>
    <string name="tv_start_quiz">Làm đề thi</string>
    <string name="tv_quizdemo">いくら良いマンションだと勧められても、家賃が月30万円もする のでは我々の（_____）庶民しょみんに借りられるはずがない。</string>
    <string name="tv_start_test">Bắt đầu</string>
    <string name="tv_status_test">Bài thi</string>
    <string name="tv_cancer">Đóng</string>
    <string name="tv_click_view_test">Click vào câu hỏi để xem chi tiết</string>
    <string name="tv_submit_test">Nộp bài</string>


    <!--Drawer Navigation-->
    <string name="nav_home">Home</string>
    <string name="nav_learning">Learning</string>
    <string name="nav_quiz">Quiz</string>
    <string name="nav_setting">Setting</string>
    <string name="nav_feedback">Feedback</string>
    <string name="nav_about">About</string>
    <string name="nav_log_out">Log out</string>

    <!--UserFragment-->
    <string name="user_fragment_action_save">Save</string>
    <string name="user_fragment_title">User Profile</string>
    <string name="user_fragment_username">username</string>
    <string name="user_fragment_email">email</string>
    <string name="user_fragment_password">password</string>
    <string name="user_fragment_action_reset_password">Reset password</string>
    <string name="action_cancel">Cancel</string>
    <string name="notify_input_new_password">Input your new password</string>
    <string name="notify_change_password_successful">Password is updated, sign in with new password!</string>
    <string name="notify_change_password_fail">Failed to update password!</string>
    <string name="notify_upload_avatar_fail">Image can not be uploaded ! Please check your connection</string>
    <string name="notify_upload_avatar_successful">Upload image successful</string>
    <string name="notify_save_user_successful">Save user information successful</string>
    <string name="notify_save_user_fail">Failed to save user information. Error: ${it.message}</string>

    <!--ChooseLevelLearningActivity-->
    <string name="title_activity_choose_level_learning">ChooseLevelLearningActivity</string>

    <!--ReviewActivity-->
    <string name="tv_totalChecked">Đã làm: %2$d câu</string>
    <string name="tv_view">Xem đáp án</string>
    <string name="title_activity_review">ReviewActivity</string>

    <!--PrepareActivity-->
    <string name="title_activity_prepare">PrepareActivity</string>
    <string name="prepare_warning">
        This quiz will test your Japanese ability\n
        Number of question : 35\n
        Time : 45 minutes\n
        Pass score : 60%\n
        Click button below to start the quiz
    </string>

    <!--QuizActivity-->
    <string name="quiz_tv_warning">Choose the way to test ability</string>
    <string name="quiz_tv_practice">Practice</string>
    <string name="quiz_tv_test">Test</string>
    <string name="quiz_tv_practice_title">Practice session</string>
    <string name="quiz_tv_test_title">Quiz session</string>
    <string name="tv_detail">Chi tiết</string>


    <!--TestActivity-->
    <string name="test_ac_up">Nộp bài thi</string>
    <string name="test_ac_up_check">Bạn đã chắc chắn muốn nộp bài?</string>
    <string name="test_ac_igon">Đồng ý</string>
    <string name="test_ac_cancle">Hủy</string>

    <!--PrepareActivity-->
    <string name="prepare_ac_up">Confirmation</string>
    <string name="prepare_ac_up_check">Are you sure to start the quiz now ?</string>
    <string name="prepare_ac_yes">Yes</string>
    <string name="prepare_ac_no">No</string>
    <!--LearningActivity-->

    <!--LearningDetailActivity-->
    <string name="title_activity_learning_detail">LearningDetailActivity</string>
    <string name="title_word">New word</string>
    <string name="title_grammar">Grammar</string>
    <string name="title_kanji">Kanji</string>
    <string name="title_bot_word">Word</string>
    <string name="title_bot_grammar">Grammar</string>
    <string name="title_bot_kanji">Kanji</string>

    <!--WelcomeActivity-->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Learn everywhere</string>
    <string name="slide_1_desc">The easiest way to control your learning progress everywhere</string>

    <string name="slide_2_title">Challenge your skill</string>
    <string name="slide_2_desc">Test your japanese ability</string>

    <string name="slide_3_title">Track your Progress</string>
    <string name="slide_3_desc"></string>

    <string name="slide_4_title">Bookmark your favourites</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear
        data
    </string>
    <string name="play_again">Play Again</string>

    <string name="title_activity_welcome">WelcomeActivity</string>

</resources>
