<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.ChooseLevelTestActivity">
    <LinearLayout
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
    >
        <TextView
                android:padding="@dimen/activity_vertical_margin"
                android:drawableLeft="@drawable/quiz_level_icon"
                android:id="@+id/tv_lever_N5"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/tv_lever_N1"/>
        <TextView
                android:padding="@dimen/activity_vertical_margin"
                android:drawableLeft="@drawable/quiz_level_icon"
                android:id="@+id/tv_lever_N4"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/tv_lever_N2"/>
        <TextView
                android:padding="@dimen/activity_vertical_margin"
                android:drawableLeft="@drawable/quiz_level_icon"
                android:id="@+id/tv_lever_N3"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/tv_lever_N3"/>
        <TextView
                android:padding="@dimen/activity_vertical_margin"
                android:drawableLeft="@drawable/quiz_level_icon"
                android:id="@+id/tv_lever_N2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/tv_lever_N4"/>
        <TextView
                android:padding="@dimen/activity_vertical_margin"
                android:drawableLeft="@drawable/quiz_level_icon"
                android:id="@+id/tv_lever_N1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/tv_lever_N5"/>

    </LinearLayout>

</LinearLayout>